temp/sql_content_tables.log
  File "<string>", line 1
    import sqlite3; conn = sqlite3.connect('projects/sampleSrc/SqlContent.db'); cursor = conn.cursor(); cursor.execute('SELECT name FROM sqlite_master WHERE type="table"'); tables = cursor.fetchall(); print('SQL Content database tables:'); for table in tables: print(f'  - {table[0]}'); conn.close()
                                                                                                                                                                                                                                                ^^^
SyntaxError: invalid syntax
